--- a/scripts/helm/charts/server-template/templates/configmap.yaml
+++ b/scripts/helm/charts/server-template/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "name" . }}-common
+  name: {{ template "fullname" . }}-common
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
