--- a/scripts/helm/charts/server-template/templates/certificate.yaml
+++ b/scripts/helm/charts/server-template/templates/certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: {{ template "name" . }}-certificate
+  name: {{ template "fullname" . }}-certificate
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
