--- a/scripts/helm/charts/server-template/templates/service.yaml
+++ b/scripts/helm/charts/server-template/templates/service.yaml
@@ -7,7 +7,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "name" $root }}-{{ $serviceName }}
+  name: {{ template "fullname" $root }}-{{ $serviceName }}
   labels:
     app: {{ template "name" $root }}
     chart: {{ $root.Chart.Name }}-{{ $root.Chart.Version | replace "+" "_" }}
