--- a/admin/config/nginx.conf
+++ b/admin/config/nginx.conf
@@ -1,7 +1,7 @@
 worker_processes                1;
 
 error_log                       /dev/stdout warn;
-pid                             /var/run/nginx.pid;
+pid                             /run/nginx.pid;
 
 events {
     worker_connections          1024;
