chore: auto confirm on info:prod

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean:storage": "if [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "info:local": "cat docker-compose.yaml | grep '# SHOW ON INFO'",
-    "info": "taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
+    "info": "yes | taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
     "info_todo_comment": "TODO autoconfirm on taito secrets:prod",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker ",
     "lint:admin": "cd admin && npm run lint",
