--- a/scripts/helm/charts/server-template/templates/cronjob.yaml
+++ b/scripts/helm/charts/server-template/templates/cronjob.yaml
@@ -36,7 +36,7 @@ spec:
               {{- if .image }}
               image: {{ .image }}
               {{- else }}
-              image: {{ $global.repository -}} / {{- $serviceName -}} : {{- $global.build.imageTag }}
+              image: {{ $global.registry -}} / {{- $serviceName -}} : {{- $global.build.imageTag }}
               {{- end }}
               imagePullPolicy: {{ $root.Values.imagePullPolicy | quote }}
               {{- if $job.command }}
