--- a/scripts/helm/charts/server-template/values.yaml
+++ b/scripts/helm/charts/server-template/values.yaml
@@ -21,7 +21,7 @@ global:
   # Common settings
   logFormat: stackdriver
   logLevel: info    # trace, debug, info, warn, error, fatal
-  repository: ${taito_registry}
+  registry: ${taito_image_registry}
   imagePullPolicy: ''
 
 # Values for server-template chart
