--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -66,7 +66,7 @@ server-template:
       secret: ${taito_project}-${taito_env}-gserviceaccount.key
     secrets:
       S3_KEY_SECRET: ${taito_project}-${taito_env}-storage-gateway.secret
-      DATABASE_PASSWORD: ${taito_project}-${taito_env}-db-app.password
+      DATABASE_PASSWORD: ${db_database_name}-db-app.password
     env:
       ENV: production
       DEBUG: false
