--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,9 +3,10 @@ images: [
   'eu.gcr.io/$PROJECT_ID/$_REPO_NAME/client:$COMMIT_SHA',
   'eu.gcr.io/$PROJECT_ID/$_REPO_NAME/server:$COMMIT_SHA'
 ]
-
 timeout: 1500s
-
+# If you want to grant outsiders access to your build logs, you mey save
+# the logs to a separate bucket and grant the outsiders access to that bucket
+# logsBucket: 'gs://my-builds' # TODO _TEMPLATE_DEFAULT for this also
 substitutions:
   _REPO_NAME: server-template
   _TEMPLATE_DEFAULT_TAITO_IMAGE:
